--- a/SpiralPay/SpiralPay/StoryboardsAndXIBs/Base.lproj/Main.storyboard
+++ b/SpiralPay/SpiralPay/StoryboardsAndXIBs/Base.lproj/Main.storyboard
@@ -1973,7 +1973,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SVz-Qs-sEu">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IYU-me-T7A" userLabel="ContentView">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="630"/>
@@ -2188,9 +2188,9 @@
                             <constraint firstItem="KzR-Iy-FCh" firstAttribute="centerY" secondItem="fG8-Zf-llx" secondAttribute="centerY" id="1nf-sc-kiD"/>
                             <constraint firstItem="xFn-ic-kx1" firstAttribute="trailing" secondItem="SVz-Qs-sEu" secondAttribute="trailing" id="8vV-HM-i2n"/>
                             <constraint firstItem="KzR-Iy-FCh" firstAttribute="centerX" secondItem="fG8-Zf-llx" secondAttribute="centerX" id="HCd-am-hQX"/>
-                            <constraint firstItem="xFn-ic-kx1" firstAttribute="bottom" secondItem="SVz-Qs-sEu" secondAttribute="bottom" id="Lr4-Bv-ofr"/>
-                            <constraint firstItem="SVz-Qs-sEu" firstAttribute="top" secondItem="xFn-ic-kx1" secondAttribute="top" id="YUu-CR-P3L"/>
                             <constraint firstItem="SVz-Qs-sEu" firstAttribute="leading" secondItem="xFn-ic-kx1" secondAttribute="leading" id="cyg-mI-ZLN"/>
+                            <constraint firstAttribute="bottom" secondItem="SVz-Qs-sEu" secondAttribute="bottom" id="dFn-wk-E1t"/>
+                            <constraint firstItem="SVz-Qs-sEu" firstAttribute="top" secondItem="fG8-Zf-llx" secondAttribute="top" id="zn2-DU-yPD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="xFn-ic-kx1"/>
                     </view>
