--- a/SpiralPay/SpiralPay/StoryboardsAndXIBs/Base.lproj/Main.storyboard
+++ b/SpiralPay/SpiralPay/StoryboardsAndXIBs/Base.lproj/Main.storyboard
@@ -24,6 +24,9 @@
         <array key="Lato-Regular.ttf">
             <string>Lato-Regular</string>
         </array>
+        <array key="SFUIText.ttf">
+            <string>.SFUIText</string>
+        </array>
     </customFonts>
     <scenes>
         <!--Phone And Email View Controller-->
@@ -2223,17 +2226,95 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqk-lh-DDs">
-                                <rect key="frame" x="155.5" y="323" width="64" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="4zz-hx-Bs4">
+                                <rect key="frame" x="0.0" y="52" width="375" height="615"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="header" rowHeight="54" id="ryp-2n-pyr">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="54"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ryp-2n-pyr" id="u9S-aH-Oz4">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ACCOUNT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NSd-hz-5BQ">
+                                                    <rect key="frame" x="30" y="28.5" width="63.5" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="17" id="4SI-Ys-NNc"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="13"/>
+                                                    <color key="textColor" red="0.50980392156862742" green="0.50980392156862742" blue="0.50980392156862742" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="NSd-hz-5BQ" firstAttribute="leading" secondItem="u9S-aH-Oz4" secondAttribute="leading" constant="30" id="3rz-0F-1Xq"/>
+                                                <constraint firstItem="NSd-hz-5BQ" firstAttribute="centerY" secondItem="u9S-aH-Oz4" secondAttribute="centerY" constant="10" id="OVQ-5K-j5s"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="option" rowHeight="46" id="Pa0-cG-VfC">
+                                        <rect key="frame" x="0.0" y="82" width="375" height="46"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Pa0-cG-VfC" id="DqJ-sH-v3q">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="46"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" tag="102" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rdm-Q0-Byb">
+                                                    <rect key="frame" x="30" y="8" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="bSI-Xd-0HM"/>
+                                                        <constraint firstAttribute="height" constant="30" id="kwl-kn-t9c"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="103" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ACCOUNT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Oh-5W-aL3">
+                                                    <rect key="frame" x="70" y="14" width="73" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="17" id="t99-uW-ygv"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="15"/>
+                                                    <color key="textColor" red="0.11764705882352941" green="0.11764705882352941" blue="0.11764705882352941" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" tag="104" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JBd-bm-PHg">
+                                                    <rect key="frame" x="311" y="7.5" width="51" height="31"/>
+                                                    <color key="onTintColor" red="0.0" green="0.63921568627450975" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5Oh-5W-aL3" firstAttribute="leading" secondItem="rdm-Q0-Byb" secondAttribute="trailing" constant="10" id="4Zt-FL-ULH"/>
+                                                <constraint firstItem="rdm-Q0-Byb" firstAttribute="leading" secondItem="DqJ-sH-v3q" secondAttribute="leading" constant="30" id="8vp-9J-jK7"/>
+                                                <constraint firstItem="5Oh-5W-aL3" firstAttribute="centerY" secondItem="DqJ-sH-v3q" secondAttribute="centerY" id="X0g-EF-mvl"/>
+                                                <constraint firstAttribute="trailing" secondItem="JBd-bm-PHg" secondAttribute="trailing" constant="15" id="Xzv-eu-jJK"/>
+                                                <constraint firstItem="rdm-Q0-Byb" firstAttribute="centerY" secondItem="DqJ-sH-v3q" secondAttribute="centerY" id="fYb-F5-o0j"/>
+                                                <constraint firstItem="JBd-bm-PHg" firstAttribute="centerY" secondItem="DqJ-sH-v3q" secondAttribute="centerY" id="qQ2-LT-nSb"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="9XS-Em-Ji1" id="SVh-Sy-YNs"/>
+                                    <outlet property="delegate" destination="9XS-Em-Ji1" id="U4K-yJ-iR0"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" tag="103" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ou-6J-J31">
+                                <rect key="frame" x="155" y="40" width="66.5" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="vZt-Pa-UfH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name=".SFUIText" family=".SF UI Text" pointSize="17"/>
+                                <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="gqk-lh-DDs" firstAttribute="centerY" secondItem="sDE-Lu-ncg" secondAttribute="centerY" id="6mv-La-dSh"/>
-                            <constraint firstItem="gqk-lh-DDs" firstAttribute="centerX" secondItem="sDE-Lu-ncg" secondAttribute="centerX" id="vIc-Rc-gh6"/>
+                            <constraint firstItem="DCs-O9-AjQ" firstAttribute="bottom" secondItem="4zz-hx-Bs4" secondAttribute="bottom" id="025-wQ-ljo"/>
+                            <constraint firstItem="7ou-6J-J31" firstAttribute="top" secondItem="DCs-O9-AjQ" secondAttribute="top" constant="20" id="G1e-uL-vks"/>
+                            <constraint firstItem="DCs-O9-AjQ" firstAttribute="trailing" secondItem="4zz-hx-Bs4" secondAttribute="trailing" id="g1I-CJ-N5g"/>
+                            <constraint firstItem="7ou-6J-J31" firstAttribute="centerX" secondItem="sDE-Lu-ncg" secondAttribute="centerX" id="gZc-5t-FcM"/>
+                            <constraint firstItem="4zz-hx-Bs4" firstAttribute="top" secondItem="DCs-O9-AjQ" secondAttribute="top" constant="32" id="lQi-pS-54b"/>
+                            <constraint firstItem="4zz-hx-Bs4" firstAttribute="leading" secondItem="DCs-O9-AjQ" secondAttribute="leading" id="wou-fj-md7"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="DCs-O9-AjQ"/>
                     </view>
